--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:orientation="vertical"
+    android:background="@android:color/white"
     tools:context="com.android.btdt.myappportfolio.MainActivity">
 
     <TextView
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:text="@string/top_title"
         android:layout_gravity="center"
+        android:textColor="@color/primary_material_dark"
         android:onClick="displayToast"/>
         
     
